
	* DESCRIPTION (Version, Date): 0.999375-25



2009-04-09  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Auxiliaries.R (Matrix.msg): new utility
	(.M.vectorSub): ditto, for vector-indexing; in
	* R/Matrix.R ([): M[i, drop=<LOGI>] should do *vector*-indexing.
	* R/Tsparse.R ([): ditto;
	* R/diagMatrix.R ([, subDiag): ditto.

	* R/Tsparse.R ([): more careful indexing of (triangular)
	TsparseMatrix.

	* tests/indexing.R: testing the above

	* R/Auxiliaries.R (gT2tT, check.gT2tT): consistency and efficiency
	improvement, using 'do.n' argument.

2009-04-08  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Matrix.R: add  as(., "vector")  etc
	* man/Matrix-class.Rd: ditto
	* inst/test-tools.R (checkMatrix): and check them

2009-04-07  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version, Date): 0.999375-24 ... released to CRAN

	* R/sparseVector.R: fix coercion from xsparse*
	* tests/Simple.R: and check it.

	* man/lu.Rd: document 'warnSing' argument
	* tests/dg_Matrix.R: and test it

	* src/dgeMatrix.c (dgeMatrix_LU): missing 'return'

2009-04-06  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version, Date): 0.999375-24 only for 2.9.0 (and newer)

2009-03-30  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/Mutils.h (Matrix_check_class_etc): new version that *computes*
	the environment to be used.
	* src/Tsparse.c, src/cs_utils.c, src/chm_common.c, src/dgCMatrix.c:
	use the above in place of Matrix_check_class_and_super().

2009-03-26  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Auxiliaries.R (MatrixClass): use cld@package, not packageSlot(.) !

2009-03-25  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version, Date): 0.999375-23

	* tests/Class+Meth.R (dotestMat): use getClassDef() for speed;
	adaptions to also work with "Matrix-extensions".
	* inst/test-tools.R (checkMatrix): similar adaptions.

2009-03-24  Martin Maechler  <maechler@stat.math.ethz.ch>
